# separator_end_effector

./: CMakeLists.txt  README.md  package.xml
config/: separator_ee.yaml
launch/: separator_ee.launch
src/: separator_end_effector.cpp
srv/: separator_service.srv
